@startuml
skinparam classAttributeIconSize 0
skinparam dpi 240
scale 1.5

' --------------------------
' Layout direction
' --------------------------
left to right direction

' ===========================
' CLASSES
' ===========================

class User {
  +_id: ObjectId
  +name: string
  +email: string
  +password: string
  +role: string
  +favoriteCarSpecs: JSON
  
  +getMe()
  +getFavoriteCarSpecs()
  +setFavoriteCarSpecs()
}

class Car {
  +_id: ObjectId
  +brand: string
  +model: string
  +year: number
  +pricePerDay: number
  +specs: JSON
  
  +createCar()
  +updateCar()
  +deleteCar()
}

class Booking {
  +_id: ObjectId
  +user: ObjectId
  +car: ObjectId
  +provider: ObjectId
  +dateFrom: Date
  +dateTo: Date
  +status: string
  
  +createBooking()
  +updateBooking()
  +updateBookingStatus()
  +deleteBooking()
  +getMyBookings()
}

class Provider {
  +_id: ObjectId
  +name: string
  +email: string
  +phone: string
  +address: string
  
  +getProviders()
}

class Auth {
  +register()
  +login()
  +logout()
}

' ===========================
' RELATIONSHIPS
' ===========================

User "1" --> "0..*" Booking : books >
Car "1" --> "0..*" Booking : reserved in >
Booking --> Car
Booking --> User
Booking --> Provider

@enduml
